# MantisBot

./: .gitignore  Cargo.toml  Shuttle.toml  config.example.json  config.json  locales.json  package-lock.json  package.json  tsconfig.json
locales/: en_US.ftl  ru_RU.ftl
pages/: index.html  style.css
site_pages/default/: index.html
sql/: start.sql
sql/insert/: insert_guild.sql  insert_member.sql  insert_user.sql
src/: bot.rs  command-params.js  database.js  database.ts  deploy-commands.js  error-embeds.js  l10n.js  main.rs  mantis.js  mantis.ts  router.rs  translator.rs
src/commands/: language.rs  mod.rs  ping.rs  selfrole.rs
src/commands/fun/: ping.js
src/commands/tech/: language.js  selfrole.js
src/commands/tech/selfrole/: browseSelfrole.js  createSelfrole.js  deleteSelfrole.js  updateSelfrole.js
src/events/: index.js  index.ts  interactionCreate.js  messageCreate.js  messageReactionAdd.js  messageReactionRemove.js  ready.js  ready.ts
static/locales/: mantis.pot
static/locales/ru/LC_MESSAGES/: mantis.mo  mantis.po
