[package]
name = "mantis-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-runtime = "0.23.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.23.0"
tokio = "1.26.0"
tracing = "0.1.37"
axum = "0.6.20"
hyper = "0.14.27"
serde = "1.0"