[package]
name = "mantis-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-runtime = "0.26.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.26.0"
tokio = "1.26.0"
tracing = "0.1.37"
axum = "0.6.20"
hyper = "0.14.27"
serde = "1.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
shuttle-aws-rds = { version = "0.26.0", features = ["postgres"] }
fluent-bundle = "0.15.2"
unic-langid = { version = "0.9.1", features = ["unic-langid-macros"] }
shuttle-static-folder = "0.26.0"
tower-http = { version = "0.4.4", features = ["fs"] }
